--- a/pdf_web/templates/base.html
+++ b/pdf_web/templates/base.html
@@ -67,7 +67,7 @@
                 {% if request.user.is_authenticated %}
                   <li class="nav-item">
                     <a class="nav-link"
-                       href="{% url 'users:detail' request.user.username %}">{% translate "My Profile" %}</a>
+                       href="{% url 'users:detail' request.user.pk %}">{% translate "My Profile" %}</a>
                   </li>
                   <li class="nav-item">
                     {# URL provided by django-allauth/account/urls.py #}
