--- a/pdf_web/templates/users/user_detail.html
+++ b/pdf_web/templates/users/user_detail.html
@@ -4,13 +4,13 @@
 
 {% block title %}
   User:
-  {{ object.username }}
+  {{ object.email }}
 {% endblock title %}
 {% block content %}
   <div class="container">
     <div class="row">
       <div class="col-sm-12">
-        <h2>{{ object.username }}</h2>
+        <h2>{{ object.email }}</h2>
         {% if object.name %}<p>{{ object.name }}</p>{% endif %}
       </div>
     </div>
